[gd_scene load_steps=16 format=3 uid="uid://by8n6r7srx0y8"]

[ext_resource type="Script" uid="uid://c22e06kkgoaw2" path="res://level.gd" id="1_f2txt"]
[ext_resource type="Texture2D" uid="uid://ddflfdpwudn0r" path="res://icon.svg" id="1_u52ul"]
[ext_resource type="Material" uid="uid://c8tbsrlih5dvs" path="res://assets/Materials/debug_orange_mat.material" id="2_vonw3"]
[ext_resource type="Script" uid="uid://blsm3myal3yqu" path="res://fast_car.gd" id="3_oi3di"]
[ext_resource type="PackedScene" uid="uid://c2cittqyl1o33" path="res://assets/Models/Car2_separatewheels.glb" id="4_0b4ue"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_u52ul"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_vonw3"]
sky_material = SubResource("ProceduralSkyMaterial_u52ul")

[sub_resource type="Environment" id="Environment_oi3di"]
background_mode = 2
sky = SubResource("Sky_vonw3")
tonemap_mode = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0b4ue"]
albedo_color = Color(0.497474, 0.497474, 0.497474, 1)
albedo_texture = ExtResource("1_u52ul")
uv1_scale = Vector3(500, 500, 500)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_0b4ue"]
height = 0.0625
radius = 0.1

[sub_resource type="BoxShape3D" id="BoxShape3D_oi3di"]
size = Vector3(0.8, 0.4, 1.9)

[sub_resource type="BoxMesh" id="BoxMesh_f2txt"]
size = Vector3(1, 0.5, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ainy"]
bg_color = Color(0, 0, 0, 0.254902)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n6hdu"]
bg_color = Color(0.418309, 0.907293, 0.464709, 1)

[sub_resource type="Theme" id="Theme_km5ld"]
ProgressBar/styles/background = SubResource("StyleBoxFlat_1ainy")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_n6hdu")

[node name="Level" type="Node3D"]
script = ExtResource("1_f2txt")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_oi3di")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="CSG" type="Node3D" parent="."]

[node name="Floor" type="CSGBox3D" parent="CSG"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.49012e-08, 0)
use_collision = true
size = Vector3(500, 0.2, 500)
material = SubResource("StandardMaterial3D_0b4ue")

[node name="TunnelCombiner" type="CSGCombiner3D" parent="CSG"]
material_override = ExtResource("2_vonw3")
use_collision = true

[node name="Tunnel" type="CSGBox3D" parent="CSG/TunnelCombiner"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.2, 2.6, -10.2)
use_collision = true
size = Vector3(10, 5, 10)

[node name="TunnelSub" type="CSGCylinder3D" parent="CSG/TunnelCombiner/Tunnel"]
transform = Transform3D(-4.37114e-08, -7.45058e-08, 1, 1, -3.25675e-15, 4.37114e-08, 0, 1, 7.45058e-08, 2.98023e-07, -2.5, -0.0249996)
operation = 2
radius = 4.3
height = 10.05

[node name="Ramp" type="CSGBox3D" parent="CSG/TunnelCombiner"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.6, 2.6, -7.55)
size = Vector3(8.8, 5, 4.7)

[node name="RampSub" type="CSGBox3D" parent="CSG/TunnelCombiner/Ramp"]
transform = Transform3D(0.866025, -0.5, 0, 0.5, 0.866025, 0, 0, 0, 1, -1.25311, 2.07045, 0)
operation = 2
size = Vector3(10.3, 4.8, 4.8)

[node name="FastCar" type="CharacterBody3D" parent="." node_paths=PackedStringArray("ground_rays")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.5, 7.6, -6.1)
script = ExtResource("3_oi3di")
ground_rays = [NodePath("GroundRays/Ray-FL"), NodePath("GroundRays/Ray-FR"), NodePath("GroundRays/Ray-BL"), NodePath("GroundRays/Ray-BR")]

[node name="Collision-FL" type="CollisionShape3D" parent="FastCar"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.315, -0.1, -0.575)
shape = SubResource("CylinderShape3D_0b4ue")

[node name="Collision-BL" type="CollisionShape3D" parent="FastCar"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.315, -0.1, 0.575)
shape = SubResource("CylinderShape3D_0b4ue")

[node name="Collision-FR" type="CollisionShape3D" parent="FastCar"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.315, -0.1, -0.575)
shape = SubResource("CylinderShape3D_0b4ue")

[node name="Collision-BR" type="CollisionShape3D" parent="FastCar"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.315, -0.1, 0.575)
shape = SubResource("CylinderShape3D_0b4ue")

[node name="Collision-Body" type="CollisionShape3D" parent="FastCar"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, 0.0500002)
shape = SubResource("BoxShape3D_oi3di")

[node name="CarModel" parent="FastCar" instance=ExtResource("4_0b4ue")]
transform = Transform3D(-0.3, 0, -2.62268e-08, 0, 0.3, 0, 2.62268e-08, 0, -0.3, 0, -0.24, 0)

[node name="Wheel-FL" parent="FastCar/CarModel" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.04685, 0.436138, 1.899)

[node name="Wheel-BL" parent="FastCar/CarModel" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.04685, 0.43614, -1.81505)

[node name="Wheel-BR" parent="FastCar/CarModel" index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.04685, 0.43614, -1.81505)

[node name="Wheel-FR" parent="FastCar/CarModel" index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.04685, 0.436138, 1.899)

[node name="DebugBlock" type="MeshInstance3D" parent="FastCar"]
visible = false
mesh = SubResource("BoxMesh_f2txt")

[node name="Camera3D" type="Camera3D" parent="FastCar"]
transform = Transform3D(1, 0, 0, 0, 0.984808, 0.173648, 0, -0.173648, 0.984808, 0, 0.7, 2.3)

[node name="TestRay" type="RayCast3D" parent="FastCar"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.4, 0)

[node name="GroundRays" type="Node3D" parent="FastCar"]

[node name="Ray-FL" type="RayCast3D" parent="FastCar/GroundRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4, -0.0999999, -0.6)
enabled = false

[node name="Ray-FR" type="RayCast3D" parent="FastCar/GroundRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, -0.0999999, -0.6)
enabled = false

[node name="Ray-BL" type="RayCast3D" parent="FastCar/GroundRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4, -0.0999999, 0.6)
enabled = false

[node name="Ray-BR" type="RayCast3D" parent="FastCar/GroundRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, -0.0999999, 0.6)
enabled = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SpeedBar" type="ProgressBar" parent="CanvasLayer"]
custom_minimum_size = Vector2(150, 30)
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -10.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2
theme = SubResource("Theme_km5ld")
value = 50.0
show_percentage = false

[node name="SpeedText" type="Label" parent="CanvasLayer/SpeedBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="TurnBar" type="ProgressBar" parent="CanvasLayer"]
custom_minimum_size = Vector2(150, 30)
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -30.0
offset_right = 150.0
grow_vertical = 0
mouse_filter = 2
theme = SubResource("Theme_km5ld")
value = 50.0
show_percentage = false

[node name="TurnText" type="Label" parent="CanvasLayer/TurnBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="QueuedTurnBar" type="ProgressBar" parent="CanvasLayer"]
custom_minimum_size = Vector2(150, 30)
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -68.0
offset_right = 150.0
offset_bottom = -38.0
grow_vertical = 0
mouse_filter = 2
theme = SubResource("Theme_km5ld")
value = 50.0
show_percentage = false

[node name="TurnText" type="Label" parent="CanvasLayer/QueuedTurnBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 1.0
offset_bottom = 11.5
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[editable path="FastCar/CarModel"]
